--- a/index.html
+++ b/index.html
@@ -40,8 +40,7 @@
                 </div>
                 <div class="about-col-2">
                     <h1 class="sub-title">About Me</h1>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam vestibulum purus vel urna facilisis, vel convallis purus laoreet. Nullam et fringilla nisl. Suspendisse potenti. Duis auctor tristique enim, nec euismod augue tincidunt eu. Nunc ac bibendum ex. Vivamus sit amet libero vel velit consequat bibendum. Integer in nunc nec magna facilisis sagittis at sit amet velit. Sed sollicitudin neque et justo cursus, id vehicula ligula fermentum. Vivamus nec fringilla sapien. Proin ut urna vel leo condimentum ullamcorper. Aenean et lacus ut libero hendrerit tincidunt. Quisque dictum blandit metus, eget laoreet metus luctus id. Curabitur non eleifend ligula, id gravida justo. Sed ac ligula vel nulla tincidunt vulputate nec nec velit. Nullam auctor arcu in eros finibus, in posuere eros cursus.</p>
-                    
+                    <p>A third-year undergraduate student at the Faculty of Mathematics and Natural Sciences, State University of Malang, majoring in Mathematics who has an interest in website and software development, especially in the front-end developer position. Has the ability to use HTML, CSS, PHP, MySQL, Python, R, and JavaScript programming languages. Skilled and experienced in using Figma. Have a great desire to improve the ability to design and develop websites and software. </p>
                     <div class="tab-titles">
                         <p class="tab-links active-link" onclick="opentab('skills')">Skills</p>
                         <p class="tab-links" onclick="opentab('experience')">Experince</p>
@@ -50,9 +49,11 @@
                     <div class="tab-contents active-tab" id="skills">
                         <ul>
                             <li><span>Web Development</span><br>
-                                Web App Development</li>
+                                Especially Front-end Development</li>
                             <li><span>UI/UX Designer</span><br>
-                                Designing Web/App Interfaces</li>
+                                Designing Web/App Interfacses</li>
+                            <li><span>Graphic Designer</span><br>
+                                Designing Poster/Content for Publication</li>
                         </ul>
                     </div>
                     <div class="tab-contents" id="experience">
@@ -68,17 +69,15 @@
                     <div class="tab-contents" id="education">
                         <ul>
                             <li><span>2021 - Current</span><br>
-                                Mathematics Undergraduate Degree State University of Malang (UM)</li>
+                                Mathematics Undergraduate Degree, State University of Malang</li>
                             <li><span>2018 - 2021</span><br>
-                                 SMA Negeri 1 Lawang, Kab.Malang</li>
+                                 SMA Negeri 1 Lawang, Malang</li>
                         </ul>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-</body>
-
 <!---service--->
 
 <div id="services">
@@ -88,19 +87,19 @@
         <div>
             <i class="fa-solid fa-code"></i>
             <h2>Front-end Developer</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam vestibulum purus vel urna facilisis, vel convallis purus laoreet. Nullam et fringilla nisl.</p>
+            <p>Specialises in coding and designing the user interface of websites or applications, ensuring an engaging and smooth user experience by implementing interactive and visually appealing elements.</p>
             <a href="#">Learn More</a>
         </div>
         <div>
             <i class="fa-solid fa-crop-simple"></i>
             <h2>UI/UX Designer</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam vestibulum purus vel urna facilisis, vel convallis purus laoreet. Nullam et fringilla nisl.</p>
+            <p>Improve user satisfaction by creating intuitive and visually appealing interfaces, focusing on both aesthetic and functional aspects to create a seamless and enjoyable user experience in digital products and applications.</p>
             <a href="#">Learn More</a>
         </div>
         <div>
             <i class="fa-solid fa-chart-line"></i>
-            <h2>Data Analyst</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam vestibulum purus vel urna facilisis, vel convallis purus laoreet. Nullam et fringilla nisl.</p>
+            <h2>Graphic Designer</h2>
+            <p>Combines artistic skills with technical proficiency to visually communicate ideas, messages, and information through various mediums such as print, digital, and multimedia.</p>
             <a href="#">Learn More</a>
         </div>
     </div>
@@ -131,9 +130,9 @@
             <div class="work">
                 <img src="image/work-3.png">
                 <div class="layer">
-                    <h3>Social Media App</h3>
-                    <p>The app connects you to the talented people around the world. Download it from play store.</p>
-                    <a href="#"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                    <h3>Designing @gimmari_indonesia's Feeds</h3>
+                    <p>The Instagram feed design consists of 3 sections. The first section is the announcement section where Gimindo products will be launched soon. The second part is the first launch of gimindo products. The third part is the announcement of the opening of Gimindo pre-order.</p>
+                    <a href="work-3.html"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                 </div>
             </div>
         </div>
@@ -218,5 +217,5 @@
         .catch(error => console.error('Error!', error.message))
     })
   </script>
-
+</body>
 </html>
