--- a/index.html
+++ b/index.html
@@ -165,6 +165,9 @@
             </div>
         </div>
     </div>
+    <div class="copyright">
+        <p><i class="fa-regular fa-copyright"></i> Designed by Elen Anggrian Natasya</p>
+    </div>
 </div>
 
 
