--- a/work-3.html
+++ b/work-3.html
@@ -92,5 +92,8 @@
             <a href="https://elenanggrian.me/#portofolio" class="btn">See More</a>
         </div>  
     </div>
+    <div class="copyright">
+        <p><i class="fa-regular fa-copyright"></i> Designed by Elen Anggrian Natasya</p>
+    </div>
 </body>
 </html>
