--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
                 <i class="fa-solid fa-bars" onclick="openmenu()"></i>
             </nav>
             <div class="header-text">
-                <p>Front-end Developer</p>
-                <h1>Hi, I'm <span>Elen</span> <br>from Indonesia</h1>
+                <p>Hello! It's me</p>
+                <h1><span>Elen,</span> front-End Developer<br>from Indonesia</h1>
             </div>
         </div> 
     </div>
@@ -43,7 +43,7 @@
                     <p>A third-year undergraduate student at the Faculty of Mathematics and Natural Sciences, State University of Malang, majoring in Mathematics who has an interest in website and software development, especially in the front-end developer position. Has the ability to use HTML, CSS, PHP, MySQL, Python, R, and JavaScript programming languages. Skilled and experienced in using Figma. Have a great desire to improve the ability to design and develop websites and software. </p>
                     <div class="tab-titles">
                         <p class="tab-links active-link" onclick="opentab('skills')">Skills</p>
-                        <p class="tab-links" onclick="opentab('experience')">Experince</p>
+                        <p class="tab-links" onclick="opentab('tools')">Tools</p>
                         <p class="tab-links" onclick="opentab('education')">Education</p>
                     </div>
                     <div class="tab-contents active-tab" id="skills">
@@ -56,14 +56,12 @@
                                 Designing Poster/Content for Publication</li>
                         </ul>
                     </div>
-                    <div class="tab-contents" id="experience">
+                    <div class="tab-contents" id="tools">
                         <ul>
-                            <li><span>UI?UX</span><br>
-                                Designing Web/App Interfacses</li>
-                            <li><span>Web Development</span><br>
-                                 Web App Development</li>
-                            <li><span>App Development</span><br>
-                                Building Android/iOS Apps</li>
+                            <li><span>Software</span><br>
+                                Figma, Visual Studio Code, Sublime Text, Github</li>
+                            <li><span>Programming Language</span><br>
+                                HTML, CSS, PHP, MySQL, Python, R, JavaScript</li>
                         </ul>
                     </div>
                     <div class="tab-contents" id="education">
@@ -88,19 +86,16 @@
             <i class="fa-solid fa-code"></i>
             <h2>Front-end Developer</h2>
             <p>Specialises in coding and designing the user interface of websites or applications, ensuring an engaging and smooth user experience by implementing interactive and visually appealing elements.</p>
-            <a href="#">Learn More</a>
         </div>
         <div>
             <i class="fa-solid fa-crop-simple"></i>
             <h2>UI/UX Designer</h2>
             <p>Improve user satisfaction by creating intuitive and visually appealing interfaces, focusing on both aesthetic and functional aspects to create a seamless and enjoyable user experience in digital products and applications.</p>
-            <a href="#">Learn More</a>
         </div>
         <div>
-            <i class="fa-solid fa-chart-line"></i>
+            <i class="fa-regular fa-object-group"></i>
             <h2>Graphic Designer</h2>
             <p>Combines artistic skills with technical proficiency to visually communicate ideas, messages, and information through various mediums such as print, digital, and multimedia.</p>
-            <a href="#">Learn More</a>
         </div>
     </div>
    </div> 
@@ -131,7 +126,7 @@
                 <img src="image/work-3.png">
                 <div class="layer">
                     <h3>Designing @gimmari_indonesia's Feeds</h3>
-                    <p>The Instagram feed design consists of 3 sections. The first section is the announcement section where Gimindo products will be launched soon. The second part is the first launch of gimindo products. The third part is the announcement of the opening of Gimindo pre-order.</p>
+                    <p>The Instagram feed design consists of 3 sections, the coming soon section, the intoduction section, and the pre-order section</p>
                     <a href="work-3.html"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                 </div>
             </div>
