--- a/index.html
+++ b/index.html
@@ -4,11 +4,9 @@
         <meta charset="utf-8" />
         <meta http-equiv="X-UA-Compatible" content="IE-edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>
-            Portofolio Elen
-        </title>
         <link rel="stylesheet" href="style.css">
         <script src="https://kit.fontawesome.com/2acd498ca4.js" crossorigin="anonymous"></script>
+        <title>Portofolio Elen</title>
     </head>
 <body>
     <div id="header">
@@ -109,9 +107,9 @@
             <div class="work">
                 <img src="image/work-1.png">
                 <div class="layer">
-                    <h3>Social Media App</h3>
+                    <h3>Website BEM FMIPA UM</h3>
                     <p>The app connects you to the talented people around the world. Download it from play store.</p>
-                    <a href="#"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                    <a href="bem/index.html"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                 </div>
             </div>
             <div class="work">
