--- a/bem/index.html
+++ b/bem/index.html
@@ -123,7 +123,7 @@
                 <div class="daftarbidang">
                 <div class="cardHeader">
                     <h2>Daftar Bidang</h2>
-                    <a href="#" class="btn">View All</a>
+                    <a href="" class="btn">View All</a>
                 </div>
                 <table>
                     <thead>
@@ -292,9 +292,215 @@
             </div>
         </div>
     </div>
-    <div class="tab-contents" id="anggota"><h1>aaa</h1></div>
-    <div class="tab-contents" id="bidang">bbb</div>
-    <div class="tab-contents" id="proker"></div>
+    <div class="tab-contents" id="anggota"></div>
+    <div class="tab-contents" id="bidang">
+        <div class="main">
+            <div class="topbar">
+            <div class="toggle">
+                <ion-icon name="menu-outline"></ion-icon>
+            </div>
+            <div class="search">
+                <label>
+                    <ion-icon name="search-outline"></ion-icon>
+                    <input type="text" placeholder="Cari">
+                </label>   
+            </div>
+            <div class="user">
+                <img src="assets/imgs/user1.jpeg">
+            </div>
+            </div>
+            <div class="details">
+                <!--Detail Bidang-->
+                <div class="daftarbidang">
+                <div class="cardHeader">
+                    <h2>Daftar Bidang</h2>
+                </div>
+                <table>
+                    <thead>
+                        <tr>
+                            <td>No.</td>
+                            <td>Nama Bidang</td>
+                            <td>Kode Bidang</td>
+                            <td>Kepala Bidang</td>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>1.</td>
+                            <td>Administrasi</td>
+                            <td>bid_adm</td>
+                            <td>Gelar Elsya Aprilia Monica</td>
+                        </tr>
+                        <tr>
+                            <td>2.</td>
+                            <td>Keuangan</td>
+                            <td>bid_keu</td>
+                            <td>Sukma Yanti Putri Ayu Suwandi</td>
+                        </tr>
+                        <tr>
+                            <td>3.</td>
+                            <td>Biro Internal dan Pengembangan Organisasi</td>
+                            <td>bid_ipo</td>
+                            <td>Ainayah Salsabilla Azzara</td>
+                        </tr>
+                        <tr>
+                            <td>4.</td>
+                            <td>Biro Media dan Informasi</td>
+                            <td>bid_medinfo</td>
+                            <td>Anisa Ulfa Ramadhani</td>
+                        </tr>
+                        <tr>
+                            <td>5.</td>
+                            <td>Kementerian PSDM</td>
+                            <td>bid_psdm</td>
+                            <td>Roya Pusparindi</td>
+                        </tr>
+                        <tr>
+                            <td>6.</td>
+                            <td>Kementerian Sosial Politik</td>
+                            <td>bid_sosp</td>
+                            <td>Nur Laila</td>
+                        </tr>
+                        <tr>
+                            <td>7.</td>
+                            <td>Biro Hubungan Eksternal</td>
+                            <td>bid_heks</td>
+                            <td>Muh. Anwar Rasyid</td>
+                        </tr>
+                        <tr>
+                            <td>8.</td>
+                            <td>Kementerian Kesejahteraan Mahasiswa</td>
+                            <td>bid_keswa</td>
+                            <td>Dimas Dwi Luqman Hakim</td>
+                        </tr>
+                        <tr>
+                            <td>9.</td>
+                            <td>Kementerian Seni dan Olahraga</td>
+                            <td>bid_seniora</td>
+                            <td>Daeng Nur Cahyo</td>
+                        </tr>
+                        <tr>
+                            <td>10.</td>
+                            <td>Kementerian Sosial Lingkungan</td>
+                            <td>bid_sosling</td>
+                            <td>Muhammad Miftahul Firdaus</td>
+                        </tr>
+                        <tr>
+                            <td>11.</td>
+                            <td>Kementerian Riset dan Teknologi</td>
+                            <td>bid_ritek</td>
+                            <td>Diajeng Ravika Adil Bangun Negara</td>
+                        </tr>
+                    </tbody>
+                </table>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="tab-contents" id="proker">
+        <div class="main">
+            <div class="topbar">
+            <div class="toggle">
+                <ion-icon name="menu-outline"></ion-icon>
+            </div>
+            <div class="search">
+                <label>
+                    <ion-icon name="search-outline"></ion-icon>
+                    <input type="text" placeholder="Cari">
+                </label>   
+            </div>
+            <div class="user">
+                <img src="assets/imgs/user1.jpeg">
+            </div>
+            </div>
+            <div class="details">
+                <!--Detail Proker-->
+                <div class="daftarproker">
+                <div class="cardHeader">
+                    <h2>Daftar Program Kerja</h2>
+                </div>
+                <table>
+                    <thead>
+                        <tr>
+                            <td>No.</td>
+                            <td>Nama Proker</td>
+                            <td>Kode Bidang</td>
+                            <td>Status</td>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>1.</td>
+                            <td>FORZA MIPA</td>
+                            <td>bid_seniora</td>
+                            <td><span class="status delivered">Selesai</span></td>
+                        </tr>
+                        <tr>
+                            <td>2.</td>
+                            <td>Mipa Scholarship</td>
+                            <td>bid_keswa</td>
+                            <td><span class="status delivered">Selesai</span></td>
+                        </tr>
+                        <tr>
+                            <td>3.</td>
+                            <td>BEM Gathering</td>
+                            <td>bid_ipo</td>
+                            <td><span class="status pending">Tertunda</span></td>
+                        </tr>
+                        <tr>
+                            <td>4.</td>
+                            <td>Artikel</td>
+                            <td>bid_medinfo</td>
+                            <td><span class="status on-progress">Berlangsung</span></td>
+                        </tr>
+                        <tr>
+                            <td>5.</td>
+                            <td>Character Building</td>
+                            <td>bid_psdm</td>
+                            <td><span class="status on-progress">Berlangsung</span></td>
+                        </tr>
+                        <tr>
+                            <td>6.</td>
+                            <td>Eksekutif Muda</td>
+                            <td>bid_sosp</td>
+                            <td><span class="status to-do">Belum</span></td>
+                        </tr>
+                        <tr>
+                            <td>7.</td>
+                            <td>KURAMA</td>
+                            <td>bid_heks</td>
+                            <td><span class="status delivered">Selesai</span></td>
+                        </tr>
+                        <tr>
+                            <td>8.</td>
+                            <td>Sharing Internship</td>
+                            <td>bid_keswa</td>
+                            <td><span class="status to-do">Belum</span></td>
+                        </tr>
+                        <tr>
+                            <td>9.</td>
+                            <td>FIKSI</td>
+                            <td>bid_seniora</td>
+                            <td><span class="status delivered">Selesai</span></td>
+                        </tr>
+                        <tr>
+                            <td>10.</td>
+                            <td>Green Action</td>
+                            <td>bid_sosling</td>
+                            <td><span class="status pending">Tertunda</span></td>
+                        </tr>
+                        <tr>
+                            <td>11.</td>
+                            <td>PKM Hunter</td>
+                            <td>bid_ritek</td>
+                            <td><span class="status on-progress">Berlangsung</span></td>
+                        </tr>
+                    </tbody>
+                </table>
+                </div>
+            </div>
+        </div>
+    </div>
     <div class="tab-contents" id="kepanitiaan"></div>
     <div class="tab-contents" id="settings"></div>
     <div class="tab-contents" id="sign-out"></div>
@@ -309,19 +515,19 @@
 <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 <script>
     //active sidebar
-   var tablinks=document.getElementsByClassName("tab-links");
-   var tabcontents=document.getElementsByClassName("tab-contents");
+    var tablinks = document.getElementsByClassName("tab-links");
+    var tabcontents = document.getElementsByClassName("tab-contents");
 
-   function opentab(tabname){
-    for(tablinks of tablinks){
-        tablinks.classList.remove("active-link");
+function opentab(tabname) {
+    for (var i = 0; i < tablinks.length; i++) {
+        tablinks[i].classList.remove("active-link");
     }
-    for(tabcontents of tabcontents){
-        tabcontents.classList.remove("active-tab");
+    for (var i = 0; i < tabcontents.length; i++) {
+        tabcontents[i].classList.remove("active-tab");
     }
     event.currentTarget.classList.add("active-link");
     document.getElementById(tabname).classList.add("active-tab");
-   }
+}
 </script>
 
 
