--- a/bem/index.html
+++ b/bem/index.html
@@ -63,7 +63,7 @@
             </ul>
         </div>
             <!--MAIN-->
-    <div class="tab-contents active-tab" id="dashboard">
+        <div class="tab-contents active-tab" id="dashboard">
         <div class="main">
             <div class="topbar">
             <div class="toggle">
@@ -291,9 +291,26 @@
                 </div>
             </div>
         </div>
-    </div>
-    <div class="tab-contents" id="anggota"></div>
-    <div class="tab-contents" id="bidang">
+        </div>
+        <div class="tab-contents" id="anggota">
+            <div class="main">
+                <div class="topbar">
+                <div class="toggle">
+                    <ion-icon name="menu-outline"></ion-icon>
+                </div>
+                <div class="search">
+                    <label>
+                        <ion-icon name="search-outline"></ion-icon>
+                        <input type="text" placeholder="Cari">
+                    </label>   
+                </div>
+                <div class="user">
+                    <img src="assets/imgs/user1.jpeg">
+                </div>
+                </div>
+            </div>
+        </div>
+        <div class="tab-contents" id="bidang">
         <div class="main">
             <div class="topbar">
             <div class="toggle">
@@ -396,8 +413,8 @@
                 </div>
             </div>
         </div>
-    </div>
-    <div class="tab-contents" id="proker">
+        </div>
+        <div class="tab-contents" id="proker">
         <div class="main">
             <div class="topbar">
             <div class="toggle">
@@ -500,10 +517,61 @@
                 </div>
             </div>
         </div>
-    </div>
-    <div class="tab-contents" id="kepanitiaan"></div>
-    <div class="tab-contents" id="settings"></div>
-    <div class="tab-contents" id="sign-out"></div>
+        </div>
+        <div class="tab-contents" id="kepanitiaan">
+            <div class="main">
+                <div class="topbar">
+                <div class="toggle">
+                    <ion-icon name="menu-outline"></ion-icon>
+                </div>
+                <div class="search">
+                    <label>
+                        <ion-icon name="search-outline"></ion-icon>
+                        <input type="text" placeholder="Cari">
+                    </label>   
+                </div>
+                <div class="user">
+                    <img src="assets/imgs/user1.jpeg">
+                </div>
+                </div>
+            </div>
+        </div>
+        <div class="tab-contents" id="settings">
+            <div class="main">
+                <div class="topbar">
+                <div class="toggle">
+                    <ion-icon name="menu-outline"></ion-icon>
+                </div>
+                <div class="search">
+                    <label>
+                        <ion-icon name="search-outline"></ion-icon>
+                        <input type="text" placeholder="Cari">
+                    </label>   
+                </div>
+                <div class="user">
+                    <img src="assets/imgs/user1.jpeg">
+                </div>
+                </div>
+            </div>
+        </div>
+        <div class="tab-contents" id="sign-out">
+            <div class="main">
+                <div class="topbar">
+                <div class="toggle">
+                    <ion-icon name="menu-outline"></ion-icon>
+                </div>
+                <div class="search">
+                    <label>
+                        <ion-icon name="search-outline"></ion-icon>
+                        <input type="text" placeholder="Cari">
+                    </label>   
+                </div>
+                <div class="user">
+                    <img src="assets/imgs/user1.jpeg">
+                </div>
+                </div>
+            </div>
+        </div>
     </div>
 
 
