--- a/bem/index.html
+++ b/bem/index.html
@@ -50,13 +50,13 @@
                 <li>
                     <p class="tab-links" onclick="opentab('settings')">
                         <span class="icon"><ion-icon name="settings-outline"></ion-icon></span>
-                        <span class="title">Settings</span>
+                        <span class="title">Pengaturan</span>
                     </p>
                 </li>
                 <li>
                     <p class="tab-links" onclick="opentab('sign-out')">
                         <span class="icon"><ion-icon name="log-out-outline"></ion-icon></span>
-                        <span class="title">Sign Out</span>
+                        <span class="title">Keluar</span>
                     </p>
                 </li>
 
