--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                 <img src="image/work-1.png">
                 <div class="layer">
                     <h3>Website BEM FMIPA UM</h3>
-                    <p>The BEM FMIPA UM website is the final project of the Web Programming course. The front-end was developed using HTML, CSS, and JavaScript.</p>
+                    <p>The BEM FMIPA UM website is the final project of the Database course. The front-end was developed using HTML, CSS, and JavaScript.</p>
                     <a href="bem/index.html"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                 </div>
             </div>
