--- a/bem/index.html
+++ b/bem/index.html
@@ -54,10 +54,10 @@
                     </p>
                 </li>
                 <li>
-                    <p class="tab-links" onclick="opentab('sign-out')">
+                    <a href="logout.php">
                         <span class="icon"><ion-icon name="log-out-outline"></ion-icon></span>
                         <span class="title">Keluar</span>
-                    </p>
+                    </a>
                 </li>
 
             </ul>
@@ -670,6 +670,33 @@
         </div>
         <div class="tab-contents" id="settings">
             <div class="content">
+                <div class="details">
+                    <div class="cardHeader">
+                        <h2>Elen Anggrian Natasya</h2>
+                    </div>
+                    <div class="userdetails">
+                        <div class="ket">
+                            <ul>
+                                <li>Nama Depan</li>
+                                <li>Nama Belakang</li>
+                                <li>NIM</li>
+                                <li>Username</li>
+                                <li>Email</li>
+                                <li>Password</li>
+                            </ul>
+                        </div>
+                        <div class="isian">
+                            <ul>
+                                <li><input type="text" value="Elen Anggrian"></li>
+                                <li><input type="text" value="Natasya"></li>
+                                <li><input type="text" value="210312625284"></li>
+                                <li><input type="text" value="admin1"></li>
+                                <li><input type="text" value="elenanggriann@gmail.com"></li>
+                                <li><input type="text" value="******"></li>
+                            </ul>
+                        </divdiv>
+                    </div>
+                </div>
             </div>
         </div>
         </div>
