--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
         <title>Portofolio Elen</title>
     </head>
 <body>
-    <div id="header">
-        <div class="container">
+    <div class="container1">
+        <div class="navbar">
             <nav>
                 <img src="image/Elen.png" class="logo">
                 <ul id="sidemenu">
@@ -23,9 +23,18 @@
                 </ul>
                 <i class="fa-solid fa-bars" onclick="openmenu()"></i>
             </nav>
-            <div class="header-text">
-                <p>Hello! It's me</p>
-                <h1><span>Elen,</span> front-End Developer<br>from Indonesia</h1>
+        </div>
+    </div>
+    <div id="header">
+        <div class="container">
+            <div class="row">
+                <div class="header-text">
+                    <h1>Hello! It's me</h1>
+                    <h1><span>Elen Anggrian N.</span></h1>
+                    <h1>Front-End Developer</h1>
+                    <p>With knowledge in web development and design, I offer the best projects resulting in quality work</p>
+                    <a href="#contact" class="button">Let's Talk</a>
+                </div>
             </div>
         </div> 
     </div>
