--- a/bem/index.html
+++ b/bem/index.html
@@ -54,7 +54,7 @@
                     </p>
                 </li>
                 <li>
-                    <a href="logout.php">
+                    <a href="login.html">
                         <span class="icon"><ion-icon name="log-out-outline"></ion-icon></span>
                         <span class="title">Keluar</span>
                     </a>
