--- a/index.html
+++ b/index.html
@@ -116,9 +116,9 @@
             <div class="work">
                 <img src="image/work-1.png">
                 <div class="layer">
-                    <h3>Website BEM FMIPA UM</h3>
-                    <p>The BEM FMIPA UM website is the final project of the Database course. The front-end was developed using HTML, CSS, and JavaScript.</p>
-                    <a href="bem/index.html"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                    <h3>Website Sistem Informasi BEM FMIPA UM</h3>
+                    <p>The Sistem Informasi BEM FMIPA UM website is the final project of the Database course. The front-end was developed using HTML, CSS, and JavaScript.</p>
+                    <a href="work-1.html"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                 </div>
             </div>
             <div class="work">
