--- a/work-1.html
+++ b/work-1.html
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE-edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>
-            Gimindo Project
+            SISFOR BEMFA MIPA Project
         </title>
         <link rel="stylesheet" href="style.css">
         <script src="https://kit.fontawesome.com/2acd498ca4.js" crossorigin="anonymous"></script>
@@ -30,8 +30,8 @@
     <div id="header-desc">
         <div class="container">
             <div class="Tittleproject-text">
-                <p>Graphic Designer</p>
-                <h1>@gimmari_indonesia's Feeds</h1>
+                <p>Front-End Developer</p>
+                <h1>Website Sistem Informasi BEM FMIPA UM</h1>
             </div>
         </div> 
     </div>
@@ -41,16 +41,16 @@
                 <div class="row">
                     <div class="desc-col-1">
                         <h2>Project information</h2>
-                        <p>This project is part of the final project of the Kewirausahaan course which requires students to open a small business. Not only that, students are also required to design a marketing strategy. One of the marketing strategies implemented is marketing through social media.</p>
-                        <p>The Instagram feed design consists of 3 sections. The first section is the announcement section where Gimindo products will be launched soon. The second part is the first launch of gimindo products. The third part is the announcement of the opening of Gimindo pre-order.</p>
+                        <p>This project is part of the final project of the Database course which requires students to make a basic website/application that focusing on the "database system". The students are required to present at least 3 tables from the database into the developed website.</p>
+                        <p>The website Sistem Informasi BEM FMIPA UM has 7 menus, namely Dashboard, Anggota, Bidang, Program Kerja, Kepanitiaan, Pengaturan, and Keluar. My contribution in this team project is to create UI/UX design and apply it to the front-end design using HTML, CSS, and JavaScript.</p>
                     </div>
                     <div class="desc-col-2">
                         <h2>Course</h2>
-                        <p>Kewirausahaan</p>
+                        <p>Database</p>
                         <h2>Date</h2>
-                        <p>Dec, 2nd 2023</p>
+                        <p>Nov, 27th 2023</p>
                         <h2>Link Project</h2>
-                        <a href="https://www.instagram.com/gimmari_indonesia/?utm_source=ig_web_button_share_sheet&igshid=MmVlMjlkMTBhMg==">@gimmari_indonesia</a>
+                        <a href="bem/index.html">Website Sistem Informasi BEM FMIPA UM</a>
                     </div>
                 </div>
             </div>
@@ -58,9 +58,9 @@
     <!-- project's image -->
     <div id="img-project">
         <div class="container">
-            <img src="image/work-3-1.gif">
-            <img src="image/work-3-2.gif">
-            <img src="image/work-3-3.gif">
+            <img src="image/work-1-1.png">
+            <img src="image/work-1-2.png">
+            <img src="image/work-1-3.png">
         </div>
     </div>
     <!-- Project -->
